--- a/assests/homepage.css
+++ b/assests/homepage.css
@@ -1,6 +1,7 @@
 @import "bootstrap/bootstrap.css";
 @import url('font/web/inter.css');
-
+:root{
+}
 
 a{
     text-decoration: none;
@@ -123,9 +124,9 @@ body{
     align-content:center;
     justify-content: center;
     line-height: 1.1rem;
-    background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
-    background-clip: content-box;
     min-height: 100vh;
+    background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+    background-attachment: fixed;
 }
 
 
