--- a/assests/homepage.css
+++ b/assests/homepage.css
@@ -51,11 +51,12 @@ h1{
 
 
 .active{
-    color:white;
-    &::before{
+
+  &::before{
       content: "—";
   }
-  transition-duration: 1s;   
+  text-shadow: 2px 2px 10px aqua;
+  color:white;
 }
 
 .card:hover{
@@ -131,7 +132,7 @@ body{
     line-height: 1.1rem;
     min-height: 100vh;
     background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
-    background-attachment: fixed;
+    background-attachment:fixed;
 }
 
 
@@ -168,7 +169,7 @@ body{
   color: var(--star-color);
   background: linear-gradient(45deg, currentColor, transparent);
   border-radius: 50%;
-  filter: drop-shadow(0 0 6px currentColor);
+  filter: drop-shadow(0 0 15px currentColor);
   transform: translate3d(104em, 0, 0);
   animation: fall var(--fall-duration) var(--fall-delay) linear infinite, tail-fade var(--tail-fade-duration) var(--fall-delay) ease-out infinite;
 }
